--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="NexoPOS 4.x"
 APP_ENV=local
 APP_KEY=base64:YPl/d7scLvv3zuebwfrK8//6A65oAwf9dXoAlk5v32A=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=https://dashpos.herokuapp.com/
 
 LOG_CHANNEL=stack
 
@@ -18,7 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=127.0.0.1
+SESSION_DOMAIN=https://dashpos.herokuapp.com/
 SESSION_COOKIE=nexopos_session
 
 REDIS_HOST=127.0.0.1
@@ -46,7 +46,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
+SANCTUM_STATEFUL_DOMAINS=https://dashpos.herokuapp.com/
 NS_ENV=production
 TELESCOPE_ENABLED=false
 DB_PREFIX=pos
