--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="NexoPOS 4.x"
 APP_ENV=local
 APP_KEY=base64:YPl/d7scLvv3zuebwfrK8//6A65oAwf9dXoAlk5v32A=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=https://dashpos.herokuapp.com/
 
 LOG_CHANNEL=stack
 
@@ -18,10 +18,10 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-SESSION_DOMAIN=127.0.0.1
+SESSION_DOMAIN=https://dashpos.herokuapp.com/
 SESSION_COOKIE=nexopos_session
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=https://dashpos.herokuapp.com/
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -46,12 +46,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-SANCTUM_STATEFUL_DOMAINS=127.0.0.1:8000
+SANCTUM_STATEFUL_DOMAINS=https://dashpos.herokuapp.com/
 NS_ENV=production
 TELESCOPE_ENABLED=false
 DB_PREFIX=pos
 NS_VERSION=4.7.5
 NS_AUTHORIZATION=V02bb07XkCARLHQzrhbU
 NS_SOCKET_PORT=6001
-NS_SOCKET_DOMAIN=127.0.0.1:8000
+NS_SOCKET_DOMAIN=https://dashpos.herokuapp.com/
 NS_SOCKET_ENABLED=false
