--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ SESSION_LIFETIME=120
 SESSION_DOMAIN=https://dashpos.herokuapp.com/
 SESSION_COOKIE=nexopos_session
 
-REDIS_HOST=https://dashpos.herokuapp.com/
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -53,5 +53,5 @@ DB_PREFIX=pos
 NS_VERSION=4.7.5
 NS_AUTHORIZATION=V02bb07XkCARLHQzrhbU
 NS_SOCKET_PORT=6001
-NS_SOCKET_DOMAIN=https://dashpos.herokuapp.com/
+NS_SOCKET_DOMAIN=127.0.0.1:8000
 NS_SOCKET_ENABLED=false
